fix tree icons size on mobile devices

--- a/styles/products/style_trees.css
+++ b/styles/products/style_trees.css
@@ -4,3 +4,9 @@
 	--collap: var(--trees-back);
 	--collapdark: var(--trees-dark);
 }
+
+
+/* Content */
+.treefeatures img {
+	width: 100%;
+}
